# LoopUnrollOptimizer_ML

./: .gitignore  .gitmodules  README  README.md  eval.py  eval_out.txt  every_loop_features_dataset.json  loop_features.json  loop_features_new.json  loop_instruction_features.json  loop_labels.json  loop_labels_final.json  optimal_luf.json  out.txt  poly_features.json  poly_gold.json  results.json  results_new.json  temp_arrayReversal.c_loop_0_luf_1.cpp  test.ll  time.cpp
big_dataset/: insertionSort.c
data_unrolled/: arrayReversal.ll  arrayReversal_loop_0_factor_1.ll  arrayReversal_loop_0_factor_2.ll  arrayReversal_loop_0_factor_8.ll  bubbleSort.ll  bubbleSort_loop_0_factor_1.ll  bubbleSort_loop_0_factor_2.ll  bubbleSort_loop_0_factor_4.ll  bubbleSort_loop_0_factor_6.ll  bubbleSort_loop_1_factor_1.ll  bubbleSort_loop_1_factor_2.ll  bubbleSort_loop_1_factor_4.ll  bubbleSort_loop_1_factor_6.ll  bubbleSort_loop_1_factor_8.ll  factorial.ll  factorial_loop_0_factor_1.ll  factorial_loop_0_factor_2.ll  factorial_loop_0_factor_4.ll  factorial_loop_0_factor_6.ll  factorial_loop_0_factor_8.ll  fibSequence_loop_0_factor_1.ll  fibSequence_loop_0_factor_2.ll  fibSequence_loop_0_factor_4.ll  fibSequence_loop_0_factor_6.ll  fibSequence_loop_0_factor_8.ll  matrixMult.ll  (+7375 more)
llvm_passes/: CMakeLists.txt
llvm_passes/feature_extraction/: CMakeLists.txt  feature_extraction.cpp  feature_extraction_pass.cpp
llvm_passes/instruction_feature_extraction/: CMakeLists.txt  instruction_feature_extraction.cpp
llvm_passes/set_unroll_factor/: CMakeLists.txt  set_unroll_factor.cpp
(+2322 files in other folders)
